--- a/authentication/static/authentication/reset_password.html
+++ b/authentication/static/authentication/reset_password.html
@@ -1,17 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<form method="post" action="{% url 'login' %}">
+<p style="float: center; text-align: center">Insert your new password</p>
+<form method="post" action="{% url 'reset_password' %}">
 {% csrf_token %}
 <table style="margin-left:auto; margin-right:auto; clear: both;">
     {{ form.as_table }}
 </table>
 <div style="float: center; text-align: center">
-    <button type="submit" class="menu-button">Login</button>
+    <button type="submit" class="menu-button">Reset</button>
 </div>
 </form>
-
-<div style="float: center; text-align: center"><a href="{% url 'request_recovery' %}">Forgotten password?</a></div>
 
 {% endblock %}
