Cambios de sonidos

--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -257,7 +257,7 @@
         this.load.image('button-oros', "{% static 'button-oros.png' %}")
         this.load.image('button-copas', "{% static 'button-copas.png' %}")
 
-        this.load.audio('your-turn-sound', "{% static 'your-turn.mp3' %}")
+        this.load.audio('your-turn-sound', "{% static 'your-turn.wav' %}")
         this.load.audio('enemy-turn-sound', "{% static 'enemy-turn.wav' %}")
         //this.load.audio('play-card-sound', "{% static 'play-card.wav' %}")
         //this.load.audio('draw-card-sound', "{% static 'draw-card.wav' %}")
