Mejorado señalizador de dirección de turno

--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -113,6 +113,9 @@
     // Carta superior de la pila de juego
     var last_played_sprite = undefined
 
+    // Indicador de sentido de turnos
+    var turn_direction_sprite = undefined
+
     // Divs HTML para el registro de chat y de acciones
     var chatboxdiv = undefined
     var historicaldiv = undefined
