--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -33,6 +33,9 @@
     // Cómo nos llamamos nosotros
     var playerName = undefined
 
+    // Background por defecto
+    var default_background = "{{ default_bg }}"
+
     // Websocket al servidor
     var gameSocket = undefined
     var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
@@ -245,6 +248,14 @@
         this.load.image('OROS-JUMP', "{% static 'OROS-JUMP.png' %}")
         this.load.image('OROS-KING', "{% static 'OROS-KING.png' %}")
 
+        this.load.image('background', "{% static 'background.png' %}")
+        this.load.image('background-blue', "{% static 'background-blue.png' %}")
+        this.load.image('background-deepcyan', "{% static 'background-deepcyan.png' %}")
+        this.load.image('background-green', "{% static 'background-green.png' %}")
+        this.load.image('background-violet', "{% static 'background-violet.png' %}")
+        this.load.image('background-gray', "{% static 'background-gray.png' %}")
+
+
         this.load.image('card-back', "{% static 'card-back.png' %}")
         this.load.image('draw-card', "{% static 'draw-card.png' %}")
         this.load.image('end-turn', "{% static 'end-turn.png' %}")
@@ -351,6 +362,9 @@
         //console.log(this)
         // "This" es la escena de juego
         scene = this
+
+        var background = this.add.image(1920 / 2, 1080 / 2, 'background-' + default_background)
+        background.setDepth(-9999999)
         
         //console.log(scene)
         //console.log(scene.textures.exists('card-back'))
