--- a/authentication/static/authentication/password_recover_request.html
+++ b/authentication/static/authentication/password_recover_request.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block content %}
-<p style="float: center; text-align: center">If you have forgotten your password, input your e-mail and we'll send you a reset link</p>
+<p style="float: center; text-align: center">{% trans "If you have forgotten your password, input your e-mail and we'll send you a reset link" %}.</p>
 <form method="post" action="{% url 'request_recovery' %}">
 {% csrf_token %}
 <table style="margin-left:auto; margin-right:auto; clear: both;">
     {{ form.as_table }}
 </table>
 <div style="float: center; text-align: center">
-    <button type="submit" class="menu-button">Recover password</button>
+    <button type="submit" class="menu-button">{% trans "Recover password" %}</button>
 </div>
 </form>
 
