--- a/authentication/static/authentication/password_recover_request_success.html
+++ b/authentication/static/authentication/password_recover_request_success.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load i18n %}
 {% block content %}
-<p style="float: center; text-align: center">If that e-mail was assigned to an account, we have sent a reset link to it. Please check your inbox and spambox. <a href="{% url 'index' %}">Go back to the main page</a></p>
+<p style="float: center; text-align: center">{% trans "If that e-mail was assigned to an account, we have sent a reset link to it. Please check your inbox and spambox" %}. <a href="{% url 'index' %}">{% trans "Go back to the main page" %}</a></p>
 {% endblock %}
