--- a/authentication/static/authentication/reset_password.html
+++ b/authentication/static/authentication/reset_password.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block content %}
-<p style="float: center; text-align: center">Insert your new password</p>
+<p style="float: center; text-align: center">{% trans "Insert your new password" %}</p>
 <form method="post" action="{% url 'reset_password' %}">
 {% csrf_token %}
 <table style="margin-left:auto; margin-right:auto; clear: both;">
     {{ form.as_table }}
 </table>
 <div style="float: center; text-align: center">
-    <button type="submit" class="menu-button">Reset</button>
+    <button type="submit" class="menu-button">{% trans "Reset" %}</button>
 </div>
 </form>
 
