--- a/authentication/static/authentication/reset_password_success.html
+++ b/authentication/static/authentication/reset_password_success.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block content %}
-<p style="float: center; text-align: center">You have successfully reset your password. <a href="{% url 'login' %}">Login</a></p>
+<p style="float: center; text-align: center">{% trans "You have successfully reset your password" %}. <a href="{% url 'login' %}">{% trans "Login" %}</a></p>
 {% endblock %}
