--- a/pumba/static/400.html
+++ b/pumba/static/400.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block content %}
 
-<div style="float: center; text-align: center"><a href="{% url 'index' %}">Go back to the index</a></div>
+<div style="float: center; text-align: center"><a href="{% url 'index' %}">{% trans "Go back to the index" %}</a></div>
 
 {% endblock %}
