--- a/authentication/static/authentication/register.html
+++ b/authentication/static/authentication/register.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% load i18n %}
 
-{% if error %}
-{{ error }}
-{% endif %}
+{% block content %}
 
 <form method="post" action="{% url 'register' %}">
 {% csrf_token %}
@@ -12,7 +10,7 @@
     {{ form.as_table }}
 </table>
 <div style="float: center; text-align: center">
-    <button type="submit" class="menu-button">Register</button>
+    <button type="submit" class="menu-button">{% trans "Register" %}</button>
 </div>
 </form>
 
