--- a/authentication/static/authentication/register_confirm.html
+++ b/authentication/static/authentication/register_confirm.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% block content %}
-<p>We have sent a message to your specified email address to finish your registrarion. Please click the link provided therein.</p>
+<p>{% trans "We have sent a message to your specified email address to finish your registration. Please click the link provided therein." %}</p>
 {% endblock %}
