--- a/authentication/static/authentication/register_success.html
+++ b/authentication/static/authentication/register_success.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% block content %}
-<p>You registered successfully! Click <a href="/authentication/login">here</a> to log in. </p>
+<p>{% trans "You registered successfully!" %} {% trans "Click" %} <a href="/authentication/login">{% trans "here" %}</a> {% trans "to log in" %}. </p>
 {% endblock %}
