--- a/game/static/game/game_phaser.html
+++ b/game/static/game/game_phaser.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 {% load static %}
+{% load i18n %}
 
 <script src="{% static 'game/phaser.min.js' %}"></script>
 
@@ -35,6 +36,18 @@
 
     // Background por defecto
     var default_background = "{{ default_bg }}"
+
+    // Lenguaje activo
+    //{% get_current_language as LANGUAGE_CODE %}
+    var language = "{{ LANGUAGE_CODE }}"
+
+    // Traducciones varias
+    // No me termina de servir el traductor de Django aquí por cadenas concatenadas; por suerte es muy poco texto
+    var strings = {
+        "your-turn": language == "es" ? "¡Tu turno!" : "Your turn!",
+        "before-enemy-turn": language == "es" ? "Turno de " : "",
+        "after-enemy-turn": language == "es" ? "" : "'s turn'"
+    }
 
     // Websocket al servidor
     var gameSocket = undefined
@@ -212,41 +225,83 @@
     {
         loader = this
         // Sin loops ni nada porque se tiene que hacer en servidor
-        this.load.image('BASTOS-ONE', "{% static 'BASTOS-ONE.png' %}")
-        this.load.image('BASTOS-TWO', "{% static 'BASTOS-TWO.png' %}")
-        this.load.image('BASTOS-COPY', "{% static 'BASTOS-COPY.png' %}")
-        this.load.image('BASTOS-DIVINE', "{% static 'BASTOS-DIVINE.png' %}")
-        this.load.image('BASTOS-FLIP', "{% static 'BASTOS-FLIP.png' %}")
-        this.load.image('BASTOS-SWITCH', "{% static 'BASTOS-SWITCH.png' %}")
-        this.load.image('BASTOS-JUMP', "{% static 'BASTOS-JUMP.png' %}")
-        this.load.image('BASTOS-KING', "{% static 'BASTOS-KING.png' %}")
+        if (language == "es") {
+            this.load.image('BASTOS-ONE', "{% static 'BASTOS-ONE-es.png' %}")
+            this.load.image('BASTOS-TWO', "{% static 'BASTOS-TWO-es.png' %}")
+            this.load.image('BASTOS-COPY', "{% static 'BASTOS-COPY-es.png' %}")
+            this.load.image('BASTOS-DIVINE', "{% static 'BASTOS-DIVINE-es.png' %}")
+            this.load.image('BASTOS-FLIP', "{% static 'BASTOS-FLIP-es.png' %}")
+            this.load.image('BASTOS-SWITCH', "{% static 'BASTOS-SWITCH-es.png' %}")
+            this.load.image('BASTOS-JUMP', "{% static 'BASTOS-JUMP-es.png' %}")
+            this.load.image('BASTOS-KING', "{% static 'BASTOS-KING-es.png' %}")
 
-        this.load.image('COPAS-ONE', "{% static 'COPAS-ONE.png' %}")
-        this.load.image('COPAS-TWO', "{% static 'COPAS-TWO.png' %}")
-        this.load.image('COPAS-COPY', "{% static 'COPAS-COPY.png' %}")
-        this.load.image('COPAS-DIVINE', "{% static 'COPAS-DIVINE.png' %}")
-        this.load.image('COPAS-FLIP', "{% static 'COPAS-FLIP.png' %}")
-        this.load.image('COPAS-SWITCH', "{% static 'COPAS-SWITCH.png' %}")
-        this.load.image('COPAS-JUMP', "{% static 'COPAS-JUMP.png' %}")
-        this.load.image('COPAS-KING', "{% static 'COPAS-KING.png' %}")
+            this.load.image('COPAS-ONE', "{% static 'COPAS-ONE-es.png' %}")
+            this.load.image('COPAS-TWO', "{% static 'COPAS-TWO-es.png' %}")
+            this.load.image('COPAS-COPY', "{% static 'COPAS-COPY-es.png' %}")
+            this.load.image('COPAS-DIVINE', "{% static 'COPAS-DIVINE-es.png' %}")
+            this.load.image('COPAS-FLIP', "{% static 'COPAS-FLIP-es.png' %}")
+            this.load.image('COPAS-SWITCH', "{% static 'COPAS-SWITCH-es.png' %}")
+            this.load.image('COPAS-JUMP', "{% static 'COPAS-JUMP-es.png' %}")
+            this.load.image('COPAS-KING', "{% static 'COPAS-KING-es.png' %}")
 
-        this.load.image('ESPADAS-ONE', "{% static 'ESPADAS-ONE.png' %}")
-        this.load.image('ESPADAS-TWO', "{% static 'ESPADAS-TWO.png' %}")
-        this.load.image('ESPADAS-COPY', "{% static 'ESPADAS-COPY.png' %}")
-        this.load.image('ESPADAS-DIVINE', "{% static 'ESPADAS-DIVINE.png' %}")
-        this.load.image('ESPADAS-FLIP', "{% static 'ESPADAS-FLIP.png' %}")
-        this.load.image('ESPADAS-SWITCH', "{% static 'ESPADAS-SWITCH.png' %}")
-        this.load.image('ESPADAS-JUMP', "{% static 'ESPADAS-JUMP.png' %}")
-        this.load.image('ESPADAS-KING', "{% static 'ESPADAS-KING.png' %}")
+            this.load.image('ESPADAS-ONE', "{% static 'ESPADAS-ONE-es.png' %}")
+            this.load.image('ESPADAS-TWO', "{% static 'ESPADAS-TWO-es.png' %}")
+            this.load.image('ESPADAS-COPY', "{% static 'ESPADAS-COPY-es.png' %}")
+            this.load.image('ESPADAS-DIVINE', "{% static 'ESPADAS-DIVINE-es.png' %}")
+            this.load.image('ESPADAS-FLIP', "{% static 'ESPADAS-FLIP-es.png' %}")
+            this.load.image('ESPADAS-SWITCH', "{% static 'ESPADAS-SWITCH-es.png' %}")
+            this.load.image('ESPADAS-JUMP', "{% static 'ESPADAS-JUMP-es.png' %}")
+            this.load.image('ESPADAS-KING', "{% static 'ESPADAS-KING-es.png' %}")
 
-        this.load.image('OROS-ONE', "{% static 'OROS-ONE.png' %}")
-        this.load.image('OROS-TWO', "{% static 'OROS-TWO.png' %}")
-        this.load.image('OROS-COPY', "{% static 'OROS-COPY.png' %}")
-        this.load.image('OROS-DIVINE', "{% static 'OROS-DIVINE.png' %}")
-        this.load.image('OROS-FLIP', "{% static 'OROS-FLIP.png' %}")
-        this.load.image('OROS-SWITCH', "{% static 'OROS-SWITCH.png' %}")
-        this.load.image('OROS-JUMP', "{% static 'OROS-JUMP.png' %}")
-        this.load.image('OROS-KING', "{% static 'OROS-KING.png' %}")
+            this.load.image('OROS-ONE', "{% static 'OROS-ONE-es.png' %}")
+            this.load.image('OROS-TWO', "{% static 'OROS-TWO-es.png' %}")
+            this.load.image('OROS-COPY', "{% static 'OROS-COPY-es.png' %}")
+            this.load.image('OROS-DIVINE', "{% static 'OROS-DIVINE-es.png' %}")
+            this.load.image('OROS-FLIP', "{% static 'OROS-FLIP-es.png' %}")
+            this.load.image('OROS-SWITCH', "{% static 'OROS-SWITCH-es.png' %}")
+            this.load.image('OROS-JUMP', "{% static 'OROS-JUMP-es.png' %}")
+            this.load.image('OROS-KING', "{% static 'OROS-KING-es.png' %}")
+
+            this.load.image('end-turn', "{% static 'end-turn-es.png' %}")
+        } else {
+            this.load.image('BASTOS-ONE', "{% static 'BASTOS-ONE-en.png' %}")
+            this.load.image('BASTOS-TWO', "{% static 'BASTOS-TWO-en.png' %}")
+            this.load.image('BASTOS-COPY', "{% static 'BASTOS-COPY-en.png' %}")
+            this.load.image('BASTOS-DIVINE', "{% static 'BASTOS-DIVINE-en.png' %}")
+            this.load.image('BASTOS-FLIP', "{% static 'BASTOS-FLIP-en.png' %}")
+            this.load.image('BASTOS-SWITCH', "{% static 'BASTOS-SWITCH-en.png' %}")
+            this.load.image('BASTOS-JUMP', "{% static 'BASTOS-JUMP-en.png' %}")
+            this.load.image('BASTOS-KING', "{% static 'BASTOS-KING-en.png' %}")
+
+            this.load.image('COPAS-ONE', "{% static 'COPAS-ONE-en.png' %}")
+            this.load.image('COPAS-TWO', "{% static 'COPAS-TWO-en.png' %}")
+            this.load.image('COPAS-COPY', "{% static 'COPAS-COPY-en.png' %}")
+            this.load.image('COPAS-DIVINE', "{% static 'COPAS-DIVINE-en.png' %}")
+            this.load.image('COPAS-FLIP', "{% static 'COPAS-FLIP-en.png' %}")
+            this.load.image('COPAS-SWITCH', "{% static 'COPAS-SWITCH-en.png' %}")
+            this.load.image('COPAS-JUMP', "{% static 'COPAS-JUMP-en.png' %}")
+            this.load.image('COPAS-KING', "{% static 'COPAS-KING-en.png' %}")
+
+            this.load.image('ESPADAS-ONE', "{% static 'ESPADAS-ONE-en.png' %}")
+            this.load.image('ESPADAS-TWO', "{% static 'ESPADAS-TWO-en.png' %}")
+            this.load.image('ESPADAS-COPY', "{% static 'ESPADAS-COPY-en.png' %}")
+            this.load.image('ESPADAS-DIVINE', "{% static 'ESPADAS-DIVINE-en.png' %}")
+            this.load.image('ESPADAS-FLIP', "{% static 'ESPADAS-FLIP-en.png' %}")
+            this.load.image('ESPADAS-SWITCH', "{% static 'ESPADAS-SWITCH-en.png' %}")
+            this.load.image('ESPADAS-JUMP', "{% static 'ESPADAS-JUMP-en.png' %}")
+            this.load.image('ESPADAS-KING', "{% static 'ESPADAS-KING-en.png' %}")
+
+            this.load.image('OROS-ONE', "{% static 'OROS-ONE-en.png' %}")
+            this.load.image('OROS-TWO', "{% static 'OROS-TWO-en.png' %}")
+            this.load.image('OROS-COPY', "{% static 'OROS-COPY-en.png' %}")
+            this.load.image('OROS-DIVINE', "{% static 'OROS-DIVINE-en.png' %}")
+            this.load.image('OROS-FLIP', "{% static 'OROS-FLIP-en.png' %}")
+            this.load.image('OROS-SWITCH', "{% static 'OROS-SWITCH-en.png' %}")
+            this.load.image('OROS-JUMP', "{% static 'OROS-JUMP-en.png' %}")
+            this.load.image('OROS-KING', "{% static 'OROS-KING-en.png' %}")
+
+            this.load.image('end-turn', "{% static 'end-turn-en.png' %}")
+        }
 
         this.load.image('background', "{% static 'background.png' %}")
         this.load.image('background-blue', "{% static 'background-blue.png' %}")
@@ -258,7 +313,6 @@
 
         this.load.image('card-back', "{% static 'card-back.png' %}")
         this.load.image('draw-card', "{% static 'draw-card.png' %}")
-        this.load.image('end-turn', "{% static 'end-turn.png' %}")
         this.load.image('toggle-end-turn', "{% static 'toggle-autoend-turn.png' %}")
         this.load.image('toggle-end-turn-circle', "{% static 'toggle-autoend-turn-circle.png' %}")
         this.load.image('forced-draw', "{% static 'forced-draw.png' %}")
